# Denoising_PoC

./: .gitignore  README.md  Untitled.ipynb  baseline_auc_results.csv  baseline_inf.sh  denoised_auc_results.csv  evaluate_baseline.py  evaluate_denoised.py  inf.sh  job.sh  main.py  move_to_single_folder.py  pyproject.toml  test  train_ddp.py  train_single_gpu.py  unimportant.txt  visualize_denoised.ipynb
datasets/: nih_dataset.py  nih_dataset_denoised.py  nih_dataset_old.py
models/: diffusion_denoiser.py
