[project]
name = "denoising-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "pandas",
    "monai-generative",
    "torchxrayvision>=1.4.0",
    "timm>=1.0.25",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "scikit-learn>=1.8.0",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true  # This is the key: it prevents shadowing

[tool.uv.sources]
torch = { index = "pytorch-cuda", marker = "sys_platform == 'linux'" }
torchvision = { index = "pytorch-cuda", marker = "sys_platform == 'linux'" }
torchaudio = { index = "pytorch-cuda", marker = "sys_platform == 'linux'" }